--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -7269,7 +7269,7 @@ display: none;
   .column-blog {
     flex-wrap: wrap;
   }
-  .offer-post .col-4 {
+  .offer-post {
     width: 31%;
     background: #001a24;
     box-shadow: 0 0 3px 0 rgb(0 0 0 / 15%);
