fleet title changes

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -2577,7 +2577,9 @@ button.search-untoggle {
 /*	8. Post: Archive
 /* -------------------------------------------------------------------------- */
 /* archive layout */
-
+.car-category-title{
+  color: #212121 !important;
+}
 .column-blog {
   display: flex;
   margin-top: 2rem;
