small changes for mobile devices

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -4895,7 +4895,8 @@ a.to-the-top > * {
 
 .wp-block-getwid-custom-post-type__post-header {
   font-weight: 700;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
+  min-height: 2rem;
 }
 
 .header-cta {
