--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -158,6 +158,7 @@ path {
 .Offer-btn {
   margin: 1rem !important;
   padding-bottom: 0rem;
+  color: white;
 }
 .offer-post-excerpt {
   margin: 1rem;
@@ -190,6 +191,8 @@ span.screen-reader-text {
   padding-bottom: 4rem;
   padding-top: 4rem;
   flex-wrap: wrap;
+  margin-left: auto !important;
+  margin-right: auto !important;
 }
 .enjoy img {
   width: 100%;
@@ -1519,7 +1522,7 @@ ul.social-icons li {
   background: #fff;
   position: relative;
 }
-.desktop-menu{
+.desktop-menu {
   margin-bottom: -10px;
 }
 .header-inner {
@@ -1651,728 +1654,7 @@ ul.social-icons li {
   top: 32px;
 }
 
-/* Header Navigation ------------------------- */
 
-.header-navigation-wrapper {
-  display: none;
-}
-
-/* Header Toggles ---------------------------- */
-
-.header-toggles {
-  display: none;
-}
-
-.header-inner .toggle {
-  align-items: center;
-  display: flex;
-  overflow: visible;
-  padding: 0 2rem;
-  outline: none;
-}
-
-.header-inner .toggle svg {
-  display: block;
-  position: relative;
-  z-index: 1;
-}
-
-.header-inner .toggle path {
-  fill: currentColor;
-}
-
-.toggle-inner {
-  display: flex;
-  justify-content: center;
-  height: 2.3rem;
-  position: relative;
-}
-
-.toggle-icon {
-  display: block;
-  overflow: hidden;
-}
-
-.toggle-inner .toggle-text {
-  color: #6d6d6d;
-  font-size: 1rem;
-  font-weight: 600;
-  position: absolute;
-  top: calc(100% + 0.5rem);
-  width: auto;
-  white-space: nowrap;
-  word-break: break-all;
-}
-
-.overlay-header .toggle-text {
-  color: inherit;
-}
-
-.header-inner .toggle:focus .toggle-text,
-.header-inner .toggle:hover .toggle-text {
-  text-decoration: underline;
-}
-
-/* Search Toggle ----------------------------- */
-
-.search-toggle {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  top: 0;
-}
-
-.search-toggle .toggle-icon,
-.search-toggle svg {
-  height: 2.5rem;
-  max-width: 2.3rem;
-  width: 2.3rem;
-}
-
-/* Navigation Toggle ------------------------- */
-
-.nav-toggle {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  top: 0;
-  width: 6.6rem;
-}
-
-.nav-toggle .toggle-icon,
-.nav-toggle svg {
-  height: 2.6rem;
-  width: 2.6rem;
-  color: #49b850;
-}
-.bootstrap-toggle {
-  height: 2.6rem;
-  width: 2.6rem;
-  color: #49b850;
-}
-
-.nav-toggle .toggle-inner {
-  padding-top: 0rem;
-}
-
-/* Primary Menu ---------------------------- */
-
-.primary-menu-wrapper {
-  display: none;
-}
-
-ul.primary-menu {
-  display: flex;
-  font-size: 1.8rem;
-  font-weight: 500;
-  letter-spacing: -0.0277em;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  margin: -0.8rem 0 0 -1.6rem;
-}
-
-.primary-menu .icon {
-  display: block;
-  height: 0.7rem;
-  position: absolute;
-  pointer-events: none;
-  transform: rotate(-45deg);
-  width: 1.3rem;
-}
-
-.primary-menu .icon::before,
-.primary-menu .icon::after {
-  content: "";
-  display: block;
-  background-color: currentColor;
-  position: absolute;
-  bottom: calc(50% - 0.1rem);
-  left: 0;
-}
-
-.primary-menu .icon::before {
-  height: 0.9rem;
-  width: 0.2rem;
-}
-
-.primary-menu .icon::after {
-  height: 0.2rem;
-  width: 0.9rem;
-}
-
-.primary-menu li {
-  font-size: inherit;
-  line-height: 1.25;
-  position: relative;
-}
-
-.primary-menu > li {
-  margin: 0.8rem 0 0 1.6rem;
-}
-
-.primary-menu > li.menu-item-has-children > a {
-  padding-right: 0rem;
-}
-
-.primary-menu > li > .icon {
-  right: -10.5rem;
-  top: calc(50% - 0.4rem);
-}
-
-.primary-menu a {
-  color: #212121 !important;
-  font-weight: 600;
-  font-size: 1rem;
-  display: block;
-  line-height: 1.2;
-  text-decoration: none;
-  word-break: normal;
-  word-wrap: normal;
-}
-
-.primary-menu a:hover,
-.primary-menu a:focus,
-.primary-menu .current_page_ancestor {
-  text-decoration: none;
-}
-
-.primary-menu li > a.current-menu-item,
-.primary-menu li.current-menu-item > .link-icon-wrapper > a {
-  text-decoration: none;
-}
-
-.primary-menu li > a.current-menu-item:hover,
-.primary-menu li.current-menu-item > .link-icon-wrapper > a:hover,
-.primary-menu li > a.current-menu-item:focus,
-.primary-menu li.current-menu-item > .link-icon-wrapper > a:focus {
-  text-decoration: none;
-}
-
-/* SUB MENU */
-
-.primary-menu ul {
-  background: #fff;
-  border-radius: 0.4rem;
-  color: #000;
-  font-size: 1.7rem;
-  opacity: 0;
-  padding: 1rem 0;
-  position: absolute;
-  right: 9999rem;
-  top: calc(100% + 2rem);
-  transition: opacity 0.15s linear, transform 0.15s linear, right 0s 0.15s;
-  transform: translateY(0.6rem);
-  width: 20rem;
-  z-index: 1;
-}
-.secondary-menu li a {
-  color: #000 !important;
-}
-
-.primary-menu li.menu-item-has-children:hover > ul,
-.primary-menu li.menu-item-has-children:focus > ul,
-.primary-menu li.menu-item-has-children.focus > ul {
-  right: 0;
-  opacity: 1;
-  transform: translateY(0);
-  transition: opacity 0.15s linear, transform 0.15s linear;
-}
-
-.primary-menu ul::before,
-.primary-menu ul::after {
-  content: "";
-  display: block;
-  position: absolute;
-  bottom: 100%;
-}
-
-.primary-menu ul::before {
-  height: 2rem;
-  left: 0;
-  right: 0;
-}
-
-.primary-menu ul::after {
-  border: 0.8rem solid transparent;
-  border-bottom-color: #fff;
-  right: 1.8rem;
-}
-
-.primary-menu ul a {
-  background: transparent;
-  border: none;
-  color: inherit;
-  display: block;
-  padding: 1rem 2rem;
-  transition: background-color 0.15s linear;
-  width: 100%;
-}
-
-.primary-menu ul li.menu-item-has-children > a {
-  padding-right: 4.5rem;
-}
-
-.primary-menu ul li.menu-item-has-children .icon {
-  position: absolute;
-  right: 1.5rem;
-  top: calc(50% - 0.5rem);
-}
-
-/* DEEP DOWN */
-.primary-menu ul ul {
-  top: -1rem;
-}
-
-.primary-menu ul li.menu-item-has-children:hover > ul,
-.primary-menu ul li.menu-item-has-children:focus > ul,
-.primary-menu ul li.menu-item-has-children.focus > ul {
-  right: calc(100% + 2rem);
-}
-
-.primary-menu ul ul::before {
-  bottom: 0;
-  height: auto;
-  left: auto;
-  right: -2rem;
-  top: 0;
-  width: 2rem;
-}
-
-.primary-menu ul ul::after {
-  border-bottom-color: transparent;
-
-  /*rtl:ignore*/
-  border-left-color: #000;
-  bottom: auto;
-  right: -1.6rem;
-  top: 2rem;
-}
-
-.rtl .primary-menu ul ul::after {
-  transform: rotate(180deg);
-}
-
-/*
- * Enable nav submenu expansion with tapping on arrows on large-viewport
- * touch interfaces (e.g. tablets or laptops with touch screens).
- * These rules are supported by all browsers (>IE11) and when JS is disabled.
- */
-@media (any-pointer: coarse) {
-  .primary-menu > li.menu-item-has-children > a {
-    padding-right: 0;
-    margin-right: 2rem;
-  }
-
-  .primary-menu ul li.menu-item-has-children > a {
-    margin-right: 4.5rem;
-    padding-right: 0;
-    width: unset;
-  }
-}
-
-/* Repeat previous rules for IE11 (when JS enabled for polyfill). */
-#GatsbyBody.touch-enabled .primary-menu > li.menu-item-has-children > a {
-  padding-right: 0;
-  margin-right: 2rem;
-}
-
-#GatsbyBody.touch-enabled .primary-menu ul li.menu-item-has-children > a {
-  margin-right: 4.5rem;
-  padding-right: 0;
-  width: unset;
-}
-
-/* -------------------------------------------------------------------------- */
-
-/*	5. Menu Modal
-/* -------------------------------------------------------------------------- */
-
-.menu-modal {
-  background: #fff;
-  display: none;
-  opacity: 0;
-  overflow-y: auto;
-  overflow-x: hidden;
-  position: fixed;
-  bottom: 0;
-  left: -99999rem;
-  right: 99999rem;
-  top: 0;
-  transition: opacity 0.25s ease-in, left 0s 0.25s, right 0s 0.25s;
-  z-index: 99;
-}
-
-.admin-bar .menu-modal {
-  top: 32px;
-}
-
-.menu-modal.show-modal {
-  display: flex;
-}
-
-.menu-modal.active {
-  left: 0;
-  opacity: 1;
-  right: 0;
-  transition: opacity 0.25s ease-out;
-  z-index: 9999;
-}
-
-.menu-modal-inner {
-  background: #49b850;
-  display: flex;
-  justify-content: stretch;
-  overflow: auto;
-  -ms-overflow-style: auto;
-  width: 100%;
-}
-
-.menu-wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  position: relative;
-}
-
-button.close-nav-toggle {
-  align-items: center;
-  display: flex;
-  font-size: 1.6rem;
-  outline: none;
-  color: #fff;
-  font-weight: 500;
-  justify-content: flex-end;
-  padding: 1rem 1.5rem;
-  width: 100%;
-}
-
-button.close-nav-toggle svg {
-  color: #fff;
-  height: 1.6rem;
-  width: 1.6rem;
-  outline: none;
-}
-
-.contact-info {
-  display: flex;
-  color: white;
-  justify-content: space-around;
-}
-.contact-item a {
-  color: white;
-  text-decoration: none;
-}
-span.contact-item {
-  display: flex;
-}
-
-button.close-nav-toggle .toggle-text {
-  margin-right: 1.6rem;
-}
-
-.menu-modal .menu-top {
-  flex-shrink: 0;
-}
-
-/* Main Menu --------------------------------- */
-
-.modal-menu {
-  position: relative;
-  left: calc(50% - 50vw);
-  width: 100vw;
-  text-align: center;
-}
-
-.modal-menu li {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  line-height: 1;
-  justify-content: flex-end;
-  margin: 0;
-}
-
-.modal-menu > li > a,
-.modal-menu > li > .ancestor-wrapper > a {
-  font-size: 1.1rem;
-  font-weight: 600;
-  letter-spacing: -0.0375em;
-}
-
-.modal-menu > li:last-child {
-  border-bottom-width: 0.1rem;
-}
-
-.modal-menu .ancestor-wrapper {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-}
-
-.modal-menu a {
-  display: block;
-  padding: 0.5rem 2.5rem;
-  text-decoration: none;
-  width: 100%;
-}
-
-button.sub-menu-toggle {
-  border-left: 0.1rem solid #dedfdf;
-  flex-shrink: 0;
-  margin: 1rem 0;
-  padding: 0 2.5rem;
-}
-
-button.sub-menu-toggle svg {
-  height: 0.9rem;
-  transition: transform 0.15s linear;
-  width: 1.5rem;
-}
-
-button.sub-menu-toggle.active svg {
-  transform: rotate(180deg);
-}
-
-.modal-menu ul {
-  display: none;
-  margin: 0;
-  width: 100%;
-}
-
-.modal-menu ul li {
-  border-left-width: 1rem;
-}
-
-.modal-menu ul li a {
-  color: inherit;
-  font-weight: 500;
-}
-
-/* Main menu animation ----------------------- */
-
-.menu-wrapper .menu-item {
-  position: relative;
-}
-
-.menu-wrapper .active {
-  display: block;
-}
-
-.menu-wrapper.is-toggling {
-  pointer-events: none;
-}
-
-.menu-wrapper.is-toggling .menu-item {
-  position: absolute;
-  top: 0;
-  left: 0;
-  margin: 0;
-  width: 100%;
-}
-
-.menu-wrapper.is-toggling .menu-bottom .social-menu .menu-item {
-  width: auto;
-}
-
-.menu-wrapper.is-animating .menu-item,
-.menu-wrapper.is-animating .toggling-target {
-  transition-duration: 250ms;
-}
-
-.menu-wrapper.is-animating .menu-item {
-  transition-property: transform;
-}
-
-.menu-wrapper.is-toggling .toggling-target {
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 1;
-}
-
-.menu-wrapper.is-toggling .toggling-target.active {
-  opacity: 0;
-}
-
-.menu-wrapper.is-animating.is-toggling .toggling-target {
-  display: block;
-  transition-property: opacity;
-  opacity: 0;
-}
-
-.menu-wrapper.is-animating.is-toggling .toggling-target.active {
-  opacity: 1;
-}
-
-.menu-wrapper.is-toggling .modal-menu > li:last-child li {
-  border-top-color: transparent;
-  border-bottom-width: 0.1rem;
-}
-
-@media (prefers-reduced-motion: reduce) {
-  .menu-wrapper.is-animating .menu-item,
-  .menu-wrapper.is-animating .toggling-target {
-    transition-duration: 1ms !important;
-  }
-}
-
-/* Expanded Menu ----------------------------- */
-
-.expanded-menu {
-  display: none;
-}
-
-.mobile-menu {
-  display: block;
-}
-
-/* Menu Bottom ------------------------------- */
-
-.menu-bottom {
-  flex-shrink: 0;
-  padding: 4rem 0;
-}
-
-.menu-bottom nav {
-  width: 100%;
-}
-
-.menu-copyright {
-  display: none;
-  font-size: 1.6rem;
-  font-weight: 500;
-  margin: 0;
-}
-
-.menu-copyright a:focus,
-.menu-copyright a:hover {
-  text-decoration: underline;
-}
-
-.menu-bottom .social-menu {
-  justify-content: center;
-}
-
-/* -------------------------------------------------------------------------- */
-
-/*	6. Search Modal
-/* -------------------------------------------------------------------------- */
-
-.search-modal {
-  background: rgba(0, 0, 0, 0.2);
-  display: none;
-  opacity: 0;
-  position: fixed;
-  bottom: 0;
-  left: -9999rem;
-  top: 0;
-  transition: opacity 0.2s linear, left 0s 0.2s linear;
-  width: 100%;
-  z-index: 999;
-}
-
-.admin-bar .search-modal.active {
-  top: 32px;
-}
-
-.search-modal-inner {
-  background: #fff;
-  transform: translateY(-100%);
-  transition: transform 0.15s linear, box-shadow 0.15s linear;
-}
-
-.search-modal-inner .section-inner {
-  display: flex;
-  justify-content: space-between;
-  max-width: 168rem;
-}
-
-.search-modal.active {
-  left: 0;
-  opacity: 1;
-  transition: opacity 0.2s linear;
-}
-
-.search-modal.active .search-modal-inner {
-  box-shadow: 0 0 2rem 0 rgba(0, 0, 0, 0.08);
-  transform: translateY(0);
-  transition: transform 0.25s ease-in-out, box-shadow 0.1s 0.25s linear;
-}
-
-button.search-untoggle {
-  align-items: center;
-  display: flex;
-  flex-shrink: 0;
-  justify-content: center;
-  margin-right: -2.5rem;
-  padding: 0 2.5rem;
-}
-
-.search-modal button.search-untoggle {
-  color: inherit;
-}
-
-.search-modal.active .search-untoggle {
-  animation: popIn both 0.3s 0.2s;
-}
-
-.search-untoggle svg {
-  height: 1.5rem;
-  transition: transform 0.15s ease-in-out;
-  width: 1.5rem;
-}
-
-.search-untoggle:focus svg,
-.search-untoggle:hover svg {
-  transform: scale(1.15);
-}
-
-/* Modal Search Form ------------------------- */
-
-.search-modal form {
-  margin: 0;
-  position: relative;
-  width: 100%;
-}
-
-.search-modal .search-field {
-  background: none;
-  border: none;
-  border-radius: 0;
-  color: inherit;
-  font-size: 2rem;
-  letter-spacing: -0.0277em;
-  height: 8.4rem;
-  margin: 0 0 0 -2rem;
-  max-width: calc(100% + 2rem);
-  padding: 0 0 0 2rem;
-  width: calc(100% + 2rem);
-}
-
-.search-modal .search-field::-webkit-input-placeholder {
-  color: inherit;
-}
-
-.search-modal .search-field:-ms-input-placeholder {
-  color: inherit;
-}
-
-.search-modal .search-field::-moz-placeholder {
-  color: inherit;
-  line-height: 4;
-}
-
-.search-modal .search-submit {
-  position: absolute;
-  right: -9999rem;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.search-modal .search-submit:focus {
-  right: 0;
-}
 
 /* -------------------------------------------------------------------------- */
 
@@ -2578,7 +1860,7 @@ button.search-untoggle {
 /* -------------------------------------------------------------------------- */
 /* archive layout */
 
-.car-category-title{
+.car-category-title {
   color: #212121 !important;
 }
 .column-blog {
@@ -2603,7 +1885,7 @@ button.search-untoggle {
   line-height: 1.5;
   letter-spacing: 1.23px;
   text-transform: uppercase !important;
-  color: #49b850!important;
+  color: #49b850 !important;
 }
 .article-post .entry-categories-inner {
   justify-content: flex-start;
@@ -5479,6 +4761,7 @@ body {
   .offer-post-excerpt {
     font-size: 1rem;
   }
+
   .col-4 {
     width: 48% !important;
   }
@@ -6459,9 +5742,9 @@ body {
   .to-the-top-short {
     display: none;
   }
-  .news-post-section{
-     margin-bottom: 0rem!important;
-     }
+  .news-post-section {
+    margin-bottom: 0rem !important;
+  }
 }
 @media (min-width: 782px) {
   .enjoy-cta-row {
@@ -6526,7 +5809,8 @@ body {
 @media (min-width: 1000px) {
   /* Document Setup ------------------------ */
   .col-4 {
-    width: 24% !important;
+    max-width: 24% !important;
+    flex: 1 0 33.333333% !important;
   }
   .section_3_col {
     width: 25%;
@@ -7354,7 +6638,7 @@ body {
   .section-divider {
     background-color: #001a24;
     padding: 78x;
-    transform: skew(0deg, -1deg) translateY(-76px);  
+    transform: skew(0deg, -1deg) translateY(-76px);
   }
   /* FOOTER COLUMN ITEMS */
   .widget-content li {
@@ -7514,7 +6798,7 @@ body {
     margin-bottom: 0px;
     padding-bottom: 0px;
     height: 70px;
-}
+  }
   .entry-content
     > *:not(.alignwide):not(.alignfull):not(.alignleft):not(.alignright):not(.is-style-wide) {
     max-width: 90rem;
@@ -7591,25 +6875,14 @@ body {
   background-color: #49b850;
   height: 14vh;
 }
-// .singular:not(.overlay-header) .entry-header a,
-// h1.entry-title,
-// h2.entry-title {
-//   color: #fff;
-// }
 .singular .featured-media::before {
   background: #fff;
 }
 .entry-content {
   margin-bottom: 4rem;
 }
-h1.entry-title{
+h1.entry-title {
   color: white;
   font-weight: lighter;
 }
-// .archive-post-title{
-//   color: #212121;
-// }
 
-
-
-// wordpress style
