small css changes

--- a/src/components/homepageelements/hompageBootstrap.scss
+++ b/src/components/homepageelements/hompageBootstrap.scss
@@ -138,7 +138,9 @@ h3.enjoy-cta {
 }
 h5.card-title {
   color: #212121;
+  min-height: 4.5rem;
 }
+
 h5.card-title:hover {
   color: #212121 !important;
 }
