post changes in home

--- a/src/components/homepageelements/hompageBootstrap.scss
+++ b/src/components/homepageelements/hompageBootstrap.scss
@@ -144,6 +144,10 @@ h5.card-title {
 h5.card-title:hover {
   color: #212121 !important;
 }
+h5.offers-title {
+  color: #212121;
+  min-height: 1.5rem;
+}
 
 // footer css bootstrap
 .footerCardBody {
