--- a/src/components/homepageelements/hompageBootstrap.scss
+++ b/src/components/homepageelements/hompageBootstrap.scss
@@ -4,10 +4,10 @@
 .container-sm,
 .container-xl {
   max-width: 90rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
+  // align-items: center;
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
