--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -6916,3 +6916,9 @@ h1.entry-title {
   padding: 0.5rem 1rem;
   margin-bottom: 0px !important;
 }
+.WheelsBookContainer{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
